Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101404

wasm: mobile keyboard keeps popping on on android

    XMLWordPrintable

Details

    • WebAssembly
    • d784c14d1 (dev), a78d5c855 (6.6), 1acd96c7e (tqtc/lts-6.5)

    Description

      The native mobile keyboard seems to pop up when the user clicks anywhere on the app, instead of just in an input area.

       

      i.e. the inputmode=none does not seem to be working

       

      To reproduce, qtbase/examples/widgets/layouts/basiclayouts example can be used. The mobile keyboard won't pop up if the click is on the app itself, but it will pop up if the click is below the app (grey area).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lpotter Lorn Potter
              lpotter Lorn Potter
              Votes:
              4 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes