wasm: prevent native mobile keyboard from popping up always

also fix misspelled 'inputMode' which seems to work.
we need to re focus to the canvas when window is raised
which will automagically close the native keyboard
when user clicks on non edit area.

Fixes: QTBUG-101404
Pick-to: 6.5
Change-Id: Iced9abc7b23e079b1060d2474a139aa653a8ca01
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Piotr Wierciński <piotr.wiercinski@qt.io>
(cherry picked from commit d784c14d101ebb1c357cf3096d99e7e9be274931)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>