src/plugins/platforms/wasm/qwasmwindow.cpp
@@ -68,9 +68,9 @@ QWasmWindow::QWasmWindow(QWindow *w, QWasmDeadKeySupport *deadKeySupport,
 
     QWasmClipboard::installEventHandlers(m_canvas);
 
-    // set inputmode to none to stop mobile keyboard opening
+    // set inputMode to none to stop mobile keyboard opening
     // when user clicks anywhere on the canvas.
-    m_canvas.set("inputmode", std::string("none"));
+    m_canvas.set("inputMode", std::string("none"));
 
     // Hide the canvas from screen readers.
     m_canvas.call<void>("setAttribute", std::string("aria-hidden"), std::string("true"));
@@ -346,6 +346,8 @@ void QWasmWindow::raise()
 {
     m_compositor->raise(this);
     invalidate();
+    if (QWasmIntegration::get()->inputContext())
+        m_canvas.call<void>("focus");
 }
 
 void QWasmWindow::lower()
